--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -21,10 +21,10 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="portfolio.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="portfolio.html#services" class="nav__link">My services</a></li>
-                <li class="nav__item"><a href="portfolio.html#about" class="nav__link">About me</a></li>
-                <li class="nav__item"><a href="portfolio.html#work" class="nav__link">My work</a></li>
+                <li class="nav__item"><a href="home.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="home.html#services" class="nav__link">My services</a></li>
+                <li class="nav__item"><a href="home.html#about" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="home.html#work" class="nav__link">My work</a></li>
             </ul>
         </nav>
     </header>
